example/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: restaurant
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
